Delete Education, move mail me dan  sosial media

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Animate On Scroll Library -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-  <title>Web Profile | Naufal</title>
+  <title> Web Profile | Naufal</title>
 
 </head>
 
@@ -26,7 +26,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg shadow-sm navbar-dark text-uppercase">
     <div class="container">
-      <h3 class="float-md-start text-light">Naufal.</h3>
+      <h3 class="float-md-start text-light"> <span style="color: #41E6CA;">//</span> M Naufal H.</h3>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,9 +44,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link aktif" href="#experience">experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link aktif" href="#contact">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -80,29 +77,44 @@
       <div class="row justify-content-center fs-5 text-justify">
         <div class="col-md-5">
           <h2 data-aos="fade-right" style="color: #41E6CA;">Wanna Know Me ?</h2>
-          <p data-aos="fade-right" class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. Living in magetan,
+          <p data-aos="fade-right" class="lead fs-4">I'm a Junior Web Developer. Living in
+            magetan,
             east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner
           </p>
-          <div class="akademi-isi">
-            <h2 data-aos="fade-right" style="padding-left: 0px; color: #41E6CA;">Education</h2>
-            <ul data-aos="fade-right" class="timeline">
-              <li>
-                <a data-aos="zoom-in" href="https://uad.ac.id/id/">UNIVERSITAS AHMAD DAHLAN</a>
-                <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
-              </li>
-              <li>
-                <a data-aos="zoom-in" href="https://smagamagetan.sch.id/">SMAN 3 MAGETAN</a>
-                <p data-aos="zoom-in">Science <br> 2017 - 2019 </p>
-              </li>
-              <li>
-                <a data-aos="zoom-in" href="#">SMPN 1 NGARIBOYO</a>
-                <p data-aos="zoom-in">2014 - 2017</p>
-              </li>
-              <li>
-                <a data-aos="zoom-in" href="#">SDN 2 BANYUDONO</a>
-                <p data-aos="zoom-in">2008- 2014</p>
-              </li>
-            </ul>
+          <div class="row">
+            <div class="col-md-5">
+              <div style="padding-bottom: 22px;" class="card text-dark bg-light mb-3">
+                <div class="card-body">
+                  <h5 class="card-title">Curious</h5>
+                  <p class="card-text fs-6"> curiosity leads to more greater learning, engagement, and performance at
+                    work
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="card text-dark bg-light mb-3">
+                <div class="card-body">
+                  <h5 class="card-title">Fast Learner</h5>
+                  <p class="card-text fs-6">The ability to learn quickly ensures that you'll keep up with the demands of
+                    your new team</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="">
+            <div class="mt-4">
+              <a data-aos="zoom-in" class="btn border-2 border-light text-light mail" href="">E-Mail Me</a>
+              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+                href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
+              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+                href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
+              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+                href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i
+                  class="fab fa-linkedin fa-2x"></i></a>
+              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+                href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
+            </div>
           </div>
         </div>
         <div data-aos="fade-right" class="col-md-4 mb-2">
@@ -124,48 +136,42 @@
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill1">
               <div class="card-skills text-center">
-                <img src="img/html.png" alt="" width="37">
-                <h6>HTML</h6>
+                <img src="img/html.png" alt="" width="47">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill2">
               <div class="card-skills text-center">
-                <img src="img/css.png" alt="" width="54">
-                <h6>CSS</h6>
+                <img src="img/css.png" alt="" width="64">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill3">
               <div class="card-skills text-center">
-                <img src="img/php.png" alt="" width="75">
-                <h6>PHP</h6>
+                <img src="img/php.png" alt="" width="85">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill4">
               <div class="card-skills text-center">
-                <img src="img/js.png" alt="" width="37">
-                <h6>Javascript</h6>
+                <img src="img/js.png" alt="" width="47">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill5">
               <div class="card-skills text-center">
-                <img src="img/Bootstrap.png" alt="" width="55">
-                <h6>Bootstrap<h6>
+                <img src="img/Bootstrap.png" alt="" width="65">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill6">
               <div class="card-skills text-center">
-                <img src="img/laravel.png" alt="" width="40">
-                <h6>Laravel</h6>
+                <img src="img/laravel.png" alt="" width="50">
               </div>
             </div>
           </div>
@@ -177,32 +183,28 @@
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills tool1">
               <div class="card-skills text-center">
-                <img src="img/photoshop.png" alt="" width="37">
-                <h6>Adobe Photoshop</h6>
+                <img src="img/photoshop.png" alt="" width="47">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills tool2">
               <div class="card-skills text-center">
-                <img src="img/premiere.png" alt="" width="37">
-                <h6>Adobe Premiere Pro</h6>
+                <img src="img/premiere.png" alt="" width="47">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills tool3">
               <div class="card-skills text-center">
-                <img src="img/after.png" alt="" width="38">
-                <h6>Adobe After Effects</h6>
+                <img src="img/after.png" alt="" width="48">
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills tool4">
               <div class="card-skills text-center">
-                <img src="img/vsc.png" alt="" width="38">
-                <h6>Visual Studio Code</h6>
+                <img src="img/vsc.png" alt="" width="48">
               </div>
             </div>
           </div>
@@ -349,46 +351,14 @@
   </section>
   <!-- Akhir Experience -->
 
-  <!-- contact Me -->
-  <Section id="contact">
-    <div class="container justify-content-center text-center">
-      <h4 data-aos="fade-down" style="color: #41E6CA;">If You Have Any Project In Your Mind</h4>
-      <a data-aos="zoom-in" class="btn btn-light mt-3" href="mailto:muhammdnaufal40@gmail.com"> Contact Me</a>
-    </div>
-  </Section>
-  <!-- Akhir contact Me -->
-
-
-
-  <!-- FindMe -->
-  <footer style="background-color: #2D3541" class="footer text-center" id="findme">
-    <div class="container">
-      <div id="">
-        <h4 style="color: #41E6CA;" data-aos="fade-down" class="text-uppercase mb-3">Sosial Media</h4>
-        <div>
-          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-            href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
-          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-            href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
-          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-            href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i
-              class="fab fa-linkedin fa-2x"></i></a>
-          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-            href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
-        </div>
+  <!-- Footer -->
+  <footer>
+    <div id="copyright" style="background-color: #212529">
+      <div class="copyright py-1 text-center text-white">
+        <p class="font-weight-light text-light">Make By 🤍 <br> From Magetan, Indonesia</p>
       </div>
     </div>
   </footer>
-  <!-- Akhir -->
-
-  <!-- Footer -->
-  <div id="copyright" style="background-color: #2D3541">
-    <div class="copyright py-1 text-center text-white">
-      <p class="font-weight-light text-light">Copyright © 2021 <a
-          href="https://www.instagram.com/mnaufalhafizh20/?hl=id" class=" text-light font-weight-bold text-uppercase"
-          style="text-decoration: none;">Muhammad Naufal Hafizh</a></p>
-    </div>
-  </div>
   <!-- Akhir Footer -->
 
   <!-- JS -->
