--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Animate On Scroll Library -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-  <title> Web Profile | Naufal</title>
+  <title>Naufal | Web Profile</title>
 
 </head>
 
@@ -78,12 +78,12 @@
         <div class="col-md-5">
           <h2 data-aos="fade-right" style="color: #41E6CA;">Wanna Know Me ?</h2>
           <p data-aos="fade-right" class="lead fs-4">I'm a Junior Web Developer. Living in
-            magetan,
-            east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner
+            magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast
+            learner
           </p>
           <div class="row">
             <div class="col-md-5">
-              <div style="padding-bottom: 22px;" class="card text-dark bg-light mb-3">
+              <div data-aos="fade-right" style="padding-bottom: 22px;" class="card text-dark bg-light mb-3 mt-3">
                 <div class="card-body">
                   <h5 class="card-title">Curious</h5>
                   <p class="card-text fs-6"> curiosity leads to more greater learning, engagement, and performance at
@@ -93,7 +93,7 @@
               </div>
             </div>
             <div class="col-md-5">
-              <div class="card text-dark bg-light mb-3">
+              <div data-aos="fade-right" class="card text-dark bg-light mb-3 mt-3">
                 <div class="card-body">
                   <h5 class="card-title">Fast Learner</h5>
                   <p class="card-text fs-6">The ability to learn quickly ensures that you'll keep up with the demands of
@@ -132,7 +132,10 @@
     <div style="margin-right: 0px; margin-left: 0px;" class="row justify-content-center fs-5">
       <div class="col-md-4">
         <div class="row">
-          <h2 data-aos="fade-up">Skills</h2>
+          <div class="mb-4">
+            <h2 style="margin-bottom: 0px;" data-aos="fade-up">Skills</h2>
+            <p class="fs-6">programming language that I often use</p>
+          </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill1">
               <div class="card-skills text-center">
@@ -177,9 +180,12 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 akademi">
-        <div class="row">
-          <h2 data-aos="fade-up">Tools</h2>
+      <div class="col-md-4">
+        <div class="row" style="margin-left: 30px;">
+          <div class="mb-4">
+            <h2 style="margin-bottom: 0px;" data-aos="fade-up">Tools</h2>
+            <p class="fs-6">tool that I often use</p>
+          </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills tool1">
               <div class="card-skills text-center">
