--- a/index.html
+++ b/index.html
@@ -104,14 +104,12 @@
           </div>
           <div id="">
             <div class="mt-4">
-              <a data-aos="zoom-in" class="btn border-2 border-light text-light mail" href="">E-Mail Me</a>
+              <a data-aos="zoom-in" class="btn border-2 border-light text-light mail"
+                href="mailto: Muhammdnaufal40@gmail.com">E-Mail Me</a>
               <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
                 href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
               <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
                 href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
-              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-                href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i
-                  class="fab fa-linkedin fa-2x"></i></a>
               <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
                 href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
             </div>
@@ -134,7 +132,7 @@
         <div class="row">
           <div class="mb-4">
             <h2 style="margin-bottom: 0px;" data-aos="fade-up">Skills</h2>
-            <p class="fs-6">programming language that I often use</p>
+            <p class="fs-6">Programming language that i often use</p>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill1">
@@ -181,10 +179,10 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="row" style="margin-left: 30px;">
+        <div id="row-tool" class="row">
           <div class="mb-4">
             <h2 style="margin-bottom: 0px;" data-aos="fade-up">Tools</h2>
-            <p class="fs-6">tool that I often use</p>
+            <p class="fs-6">Tool that i often use</p>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills tool1">
@@ -230,7 +228,6 @@
           <div style="background-color: #2D3541" class="card">
             <img data-aos="fade-right" src="img/project1.png" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 data-aos="zoom-in" class="card-title text-light">CRUD Apotek</h5>
               <button data-aos="zoom-in" style="background-color: white" type="button" class="btn mt-2"
                 data-bs-toggle="modal" data-bs-target="#modalproject1">
                 More Information
@@ -242,7 +239,6 @@
           <div style="background-color: #2D3541" class=" card text-dark">
             <img data-aos="fade-left" src=" img/project2-2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 data-aos="zoom-in" class="card-title text-light">CRUD Toko Bangunan</h5>
               <button data-aos="zoom-in" style="background-color: white" type="button" class="btn mt-2 text-dark"
                 data-bs-toggle="modal" data-bs-target="#modalproject2">
                 More Information
@@ -294,66 +290,72 @@
                   <li>Technology : HTML, CSS, Javascript, PHP, Bootstrap, AOS</li>
                   <li>Databases : MYSQli</li>
                 </ul>
+                <div class=" justify-content-center text-center">
+                <a href="" class=" btn bg-dark text-light">View Souce Code</a>
               </div>
-            </div>
-            <!-- <div class=" modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              </div> -->
             </div>
           </div>
+          <!-- <div class=" modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div> -->
         </div>
-        <!-- modal project 2 -->
-        <div class="modal fade" id="modalproject2" tabindex="-1" aria-labelledby="modalproject2" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header border-bottom-0">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <center>
-                  <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="img/project2-1.png" class="d-block w-75" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/project2-2.png" class="d-block w-75" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/project2-3.png" class="d-block w-75" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/project2-4.png" class="d-block w-75" alt="...">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
-                      data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2"
-                      data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
+      </div>
+    </div>
+    <!-- modal project 2 -->
+    <div class="modal fade" id="modalproject2" tabindex="-1" aria-labelledby="modalproject2" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header border-bottom-0">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <center>
+              <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/project2-1.png" class="d-block w-75" alt="...">
                   </div>
-                </center>
-                <br>
-                <div class="isinya text-dark text-start"">
+                  <div class="carousel-item">
+                    <img src="img/project2-2.png" class="d-block w-75" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/project2-3.png" class="d-block w-75" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/project2-4.png" class="d-block w-75" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
+                  data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2"
+                  data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </center>
+            <br>
+            <div class="isinya text-dark text-start"">
                 <p class="">This building shop crud was made to fulfill the Database Course Practicum Response</p>
                 <ul>
                   <li>Technology : HTML, CSS, Javascript, PHP and Bootstrap</li>
                   <li>Databases : MYSQli</li>
                 </ul>
-              </div>
-            </div>
-            <!-- <div class=" modal-footer border-bottom-0">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div> -->
-              </div>
+                <div class=" justify-content-center text-center">
+              <a href="" class=" btn bg-dark text-light">View Souce Code</a>
             </div>
           </div>
         </div>
+        <!-- <div class=" modal-footer border-bottom-0">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div> -->
+      </div>
+    </div>
+    </div>
+    </div>
   </section>
   <!-- Akhir Experience -->
 
