--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link aktif" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link aktif" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link aktif" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link aktif" href="#experience">experience</a>
+            <a class="nav-link aktif" href="#Project">Project</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link aktif" href="#certificates">Certificates</a>
           </li>
         </ul>
       </div>
@@ -72,55 +72,60 @@
   <!-- Akhir -->
 
   <!-- About -->
-  <section id="about" style="background-color: #2D3541">
+  <section id="about">
     <div class="container">
-      <div class="row justify-content-center fs-5 text-justify">
-        <div class="col-md-5">
-          <h2 data-aos="fade-right" style="color: #41E6CA;">Wanna Know Me ?</h2>
-          <p data-aos="fade-right" class="lead fs-4">I'm a Junior Web Developer. Living in
-            magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast
-            learner
-          </p>
-          <div class="row">
-            <div class="col-md-5">
-              <div data-aos="fade-right" style="padding-bottom: 22px;" class="card text-dark bg-light mb-3 mt-3">
-                <div class="card-body">
-                  <h5 class="card-title">Curious</h5>
-                  <p class="card-text fs-6"> curiosity leads to more greater learning, engagement, and performance at
-                    work
-                  </p>
+      <div style="background-color: #2D3541" id="about-card" class="card">
+        <div class="row g-4 justify-content-center fs-5 text-justify">
+          <div class="col-md-5">
+            <h2 data-aos="fade-right" style="color: #41E6CA;">Wanna Know Me ?</h2>
+            <p data-aos="fade-right" class="lead fs-4">I'm a Junior Web Developer. Living in
+              magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and
+              fast
+              learner
+            </p>
+            <div class="row">
+              <div class="col-md-5">
+                <div data-aos="fade-right" style="padding-bottom: 22px;" class="card text-dark bg-light mb-3 mt-3">
+                  <div class="card-body">
+                    <h5 class="card-title">Curious</h5>
+                    <p class="card-text fs-6"> curiosity leads to more greater learning, engagement, and performance at
+                      work
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-5">
+                <div data-aos="fade-right" class="card text-dark bg-light mb-3 mt-3">
+                  <div class="card-body">
+                    <h5 class="card-title">Fast Learner</h5>
+                    <p class="card-text fs-6">The ability to learn quickly ensures that you'll keep up with the demands
+                      of
+                      your new team</p>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-5">
-              <div data-aos="fade-right" class="card text-dark bg-light mb-3 mt-3">
-                <div class="card-body">
-                  <h5 class="card-title">Fast Learner</h5>
-                  <p class="card-text fs-6">The ability to learn quickly ensures that you'll keep up with the demands of
-                    your new team</p>
-                </div>
+            <div id="">
+              <div class="mt-4">
+                <a data-aos="zoom-in" class="btn border-2 border-light text-light mail"
+                  href="mailto: Muhammdnaufal40@gmail.com">E-Mail Me</a>
+                <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+                  href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
+                <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+                  href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
+                <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+                  href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
               </div>
             </div>
           </div>
-          <div id="">
-            <div class="mt-4">
-              <a data-aos="zoom-in" class="btn border-2 border-light text-light mail"
-                href="mailto: Muhammdnaufal40@gmail.com">E-Mail Me</a>
-              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-                href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
-              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-                href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
-              <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-                href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
+          <div data-aos="fade-right" class="col-md-4 mb-2">
+            <div class="card" style="border: none; border-radius: 12px;">
+              <img src="img/about-min.jpg" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
             </div>
-          </div>
-        </div>
-        <div data-aos="fade-right" class="col-md-4 mb-2">
-          <div class="card" style="border: none; border-radius: 12px;">
-            <img src="img/about-min.jpg" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
           </div>
         </div>
       </div>
+
     </div>
   </section>
   <!-- Akhir About -->
@@ -220,148 +225,107 @@
   <!-- akhir skill dan akademik -->
 
   <!-- Experience -->
-  <section style="background-color: #2D3541" id="experience">
-    <div class="container text-center">
-      <h1 class="" data-aos="fade-up">Experience</h1>
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-          <div style="background-color: #2D3541" class="card">
-            <img data-aos="fade-right" src="img/project1.png" class="card-img-top" alt="...">
-            <div class="card-body text-dark">
-              <button data-aos="zoom-in" style="background-color: white" type="button" class="btn mt-2"
-                data-bs-toggle="modal" data-bs-target="#modalproject1">
-                More Information
-              </button>
-            </div>
+  <section class="project" id="Project">
+    <div class="container">
+      <h2 class="mb-3 text-center">Project</h2>
+      <div class="card bg-dark" id="card-project">
+        <div class="row justify-content-center">
+          <div class="col-lg-4 mt-3" align="center">
+            <img class="project-preview mb-3" src="img/project1.png" width="100%" alt="" />
+            <a class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
           </div>
-        </div>
-        <div class="col">
-          <div style="background-color: #2D3541" class=" card text-dark">
-            <img data-aos="fade-left" src=" img/project2-2.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <button data-aos="zoom-in" style="background-color: white" type="button" class="btn mt-2 text-dark"
-                data-bs-toggle="modal" data-bs-target="#modalproject2">
-                More Information
-              </button>
-            </div>
+          <div class="col-lg-4 mt-3" align="center">
+            <img class="project-preview mb-3" src="img/project2-2.png" width="100%" alt="" />
+            <a class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
           </div>
         </div>
       </div>
-      <!-- modal project 1 -->
-      <div class="modal fade" id="modalproject1" tabindex="-1" aria-labelledby="modalproject1" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header border-bottom-0">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <center>
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img src="img/project1.png" class="d-block w-75" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="img/project2.png" class="d-block w-75" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="img/project3.png" class="d-block w-75" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="img/project4.png" class="d-block w-75" alt="...">
-                    </div>
-                  </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
-                </div>
-              </center>
-              <br>
-              <div class="isinya text-dark text-start"">
-                <p class="">This pharmacy crud was made to fulfill the final group assignment for the PRPL course</p>
-                <ul>
-                  <li>Technology : HTML, CSS, Javascript, PHP, Bootstrap, AOS</li>
-                  <li>Databases : MYSQli</li>
-                </ul>
-                <div class=" justify-content-center text-center">
-                <a href="" class=" btn bg-dark text-light">View Souce Code</a>
-              </div>
-            </div>
-          </div>
-          <!-- <div class=" modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              </div> -->
-        </div>
-      </div>
-    </div>
-    <!-- modal project 2 -->
-    <div class="modal fade" id="modalproject2" tabindex="-1" aria-labelledby="modalproject2" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header border-bottom-0">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <center>
-              <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="img/project2-1.png" class="d-block w-75" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="img/project2-2.png" class="d-block w-75" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="img/project2-3.png" class="d-block w-75" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="img/project2-4.png" class="d-block w-75" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            </center>
-            <br>
-            <div class="isinya text-dark text-start"">
-                <p class="">This building shop crud was made to fulfill the Database Course Practicum Response</p>
-                <ul>
-                  <li>Technology : HTML, CSS, Javascript, PHP and Bootstrap</li>
-                  <li>Databases : MYSQli</li>
-                </ul>
-                <div class=" justify-content-center text-center">
-              <a href="" class=" btn bg-dark text-light">View Souce Code</a>
-            </div>
-          </div>
-        </div>
-        <!-- <div class=" modal-footer border-bottom-0">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div> -->
-      </div>
-    </div>
-    </div>
     </div>
   </section>
   <!-- Akhir Experience -->
 
+  <section id="certificates">
+    <div class="container">
+      <div id="certificates-card" class="card border-0">
+        <h2 class="mb-3 text-center">Certificates</h2>
+        <div id="carouselExampleIndicators" class="carousel slide w-100" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+              class="active"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
+                    <img id="certificate-image" src="img/1.jpg" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div class="col-md-6 align-self-center">
+                  <h3 class="mt-2">Peserta Kolaborasi Bangkinkan Talenta Negeri</h3>
+                  <p class="company">Kewirausahaan Sosial UGM</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
+                    <img id="certificate-image" src="img/2.jpg" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div class="col-md-6 align-self-center">
+                  <h3 class="mt-2">Peserta Rekayasa Perangkat Lunak</h3>
+                  <p class="company">Universitas Ahmad Dahlan</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
+                    <img id="certificate-image" src="img/3.jpeg" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div class="col-md-6 align-self-center">
+                  <h3 class="mt-2">Juara 1 Lomba DDP</h3>
+                  <p class="company">Universitas Ahmad Dahlan</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
+                    <img id="certificate-image" src="img/4.jpeg" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div class="col-md-6 align-self-center">
+                  <h3 class="mt-2">Peserta Soft Skills 2019/2020</h3>
+                  <p class="company">Universitas Ahmad Dahlan</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"><span class="sr-only">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"><span class="sr-only">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer>
-    <div id="copyright" style="background-color: #212529">
+    <div id=" copyright" style="background-color: #212529">
       <div class="copyright py-1 text-center text-white">
         <p class="font-weight-light text-light">Make By 🤍 <br> From Magetan, Indonesia</p>
       </div>
