--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="row">
           <div class="mb-4">
             <h2 style="margin-bottom: 0px;" data-aos="fade-up">Skills</h2>
-            <p class="fs-6">Programming language that i often use</p>
+            <p data-aos="fade-right" class="fs-6">Programming language that i often use</p>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill1">
@@ -187,7 +187,7 @@
         <div id="row-tool" class="row">
           <div class="mb-4">
             <h2 style="margin-bottom: 0px;" data-aos="fade-up">Tools</h2>
-            <p class="fs-6">Tool that i often use</p>
+            <p data-aos="fade-left" class="fs-6">Tool that i often use</p>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills tool1">
@@ -227,16 +227,16 @@
   <!-- Experience -->
   <section class="project" id="Project">
     <div class="container">
-      <h2 class="mb-3 text-center">Project</h2>
+      <h2 data-aos="fade-up" class="mb-3 text-center">Project</h2>
       <div class="card bg-dark" id="card-project">
         <div class="row justify-content-center">
           <div class="col-lg-4 mt-3" align="center">
-            <img class="project-preview mb-3" src="img/project1.png" width="100%" alt="" />
-            <a class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
+            <img data-aos="fade-right" class="project-preview mb-3" src="img/project1.png" width="100%" alt="" />
+            <a data-aos="fade-up" class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
           </div>
           <div class="col-lg-4 mt-3" align="center">
-            <img class="project-preview mb-3" src="img/project2-2.png" width="100%" alt="" />
-            <a class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
+            <img data-aos="fade-left" class="project-preview mb-3" src="img/project2-2.png" width="100%" alt="" />
+            <a data-aos="fade-up" class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
           </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
   <section id="certificates">
     <div class="container">
       <div id="certificates-card" class="card border-0">
-        <h2 class="mb-3 text-center">Certificates</h2>
+        <h2 data-aos="fade-up" class="mb-4 text-center color-certificates">Certificates</h2>
         <div id="carouselExampleIndicators" class="carousel slide w-100" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -261,10 +261,10 @@
               <div class="row">
                 <div class="col-md-6">
                   <center>
-                    <img id="certificate-image" src="img/1.jpg" class="d-block w-75" alt="..." />
+                    <img data-aos="fade-right" id="certificate-image" src="img/1.jpg" class="d-block w-75" alt="..." />
                   </center>
                 </div>
-                <div class="col-md-6 align-self-center">
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Peserta Kolaborasi Bangkinkan Talenta Negeri</h3>
                   <p class="company">Kewirausahaan Sosial UGM</p>
                 </div>
@@ -274,10 +274,10 @@
               <div class="row">
                 <div class="col-md-6">
                   <center>
-                    <img id="certificate-image" src="img/2.jpg" class="d-block w-75" alt="..." />
+                    <img data-aos="fade-right" id="certificate-image" src="img/2.jpg" class="d-block w-75" alt="..." />
                   </center>
                 </div>
-                <div class="col-md-6 align-self-center">
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Peserta Rekayasa Perangkat Lunak</h3>
                   <p class="company">Universitas Ahmad Dahlan</p>
                 </div>
@@ -287,10 +287,10 @@
               <div class="row">
                 <div class="col-md-6">
                   <center>
-                    <img id="certificate-image" src="img/3.jpeg" class="d-block w-75" alt="..." />
+                    <img data-aos="fade-right" id="certificate-image" src="img/3.jpeg" class="d-block w-75" alt="..." />
                   </center>
                 </div>
-                <div class="col-md-6 align-self-center">
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Juara 1 Lomba DDP</h3>
                   <p class="company">Universitas Ahmad Dahlan</p>
                 </div>
@@ -300,10 +300,10 @@
               <div class="row">
                 <div class="col-md-6">
                   <center>
-                    <img id="certificate-image" src="img/4.jpeg" class="d-block w-75" alt="..." />
+                    <img data-aos="fade-right" id="certificate-image" src="img/4.jpeg" class="d-block w-75" alt="..." />
                   </center>
                 </div>
-                <div class="col-md-6 align-self-center">
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Peserta Soft Skills 2019/2020</h3>
                   <p class="company">Universitas Ahmad Dahlan</p>
                 </div>
