--- a/index.html
+++ b/index.html
@@ -232,11 +232,13 @@
         <div class="row justify-content-center">
           <div class="col-lg-4 mt-3" align="center">
             <img data-aos="fade-right" class="project-preview mb-3" src="img/project1.png" width="100%" alt="" />
-            <a data-aos="fade-up" class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
+            <a data-aos="fade-up" class="view-code text-light" href="https://github.com/krisdewa/PHP-CRUD-Apotek"><i
+                class="fab fa-github"></i> View Code</a>
           </div>
           <div class="col-lg-4 mt-3" align="center">
             <img data-aos="fade-left" class="project-preview mb-3" src="img/project2-2.png" width="100%" alt="" />
-            <a data-aos="fade-up" class="view-code text-light" href=""><i class="fab fa-github"></i> View Code</a>
+            <a data-aos="fade-up" class="view-code text-light"
+              href="https://github.com/NaufalHafizh/Responsi_Basisdata"><i class="fab fa-github"></i> View Code</a>
           </div>
         </div>
       </div>
