--- a/index.html
+++ b/index.html
@@ -263,11 +263,24 @@
               <div class="row">
                 <div class="col-md-6">
                   <center>
+                    <img data-aos="fade-right" id="certificate-image" src="img/5.jpg" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
+                  <h3 class="mt-2">HTML Course</h3>
+                  <p class="company">Sololearn</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
                     <img data-aos="fade-right" id="certificate-image" src="img/1.jpg" class="d-block w-75" alt="..." />
                   </center>
                 </div>
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
-                  <h3 class="mt-2">Peserta Kolaborasi Bangkinkan Talenta Negeri</h3>
+                  <h3 class="mt-2">Peserta Kolaborasi Bangkitkan Talenta Negeri</h3>
                   <p class="company">Kewirausahaan Sosial UGM</p>
                 </div>
               </div>
@@ -294,19 +307,6 @@
                 </div>
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Juara 1 Lomba DDP</h3>
-                  <p class="company">Universitas Ahmad Dahlan</p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-6">
-                  <center>
-                    <img data-aos="fade-right" id="certificate-image" src="img/4.jpeg" class="d-block w-75" alt="..." />
-                  </center>
-                </div>
-                <div data-aos="fade-left" class="col-md-6 align-self-center">
-                  <h3 class="mt-2">Peserta Soft Skills 2019/2020</h3>
                   <p class="company">Universitas Ahmad Dahlan</p>
                 </div>
               </div>
