--- a/index.html
+++ b/index.html
@@ -232,13 +232,14 @@
         <div class="row justify-content-center">
           <div class="col-lg-4 mt-3" align="center">
             <img data-aos="fade-right" class="project-preview mb-3" src="img/project1.png" width="100%" alt="" />
-            <a data-aos="fade-up" class="view-code text-light" href="https://github.com/krisdewa/PHP-CRUD-Apotek"><i
-                class="fab fa-github"></i> View Code</a>
+            <a data-aos="fade-up" class="view-code text-light" href="https://github.com/krisdewa/PHP-CRUD-Apotek">View
+              Source Code</a>
           </div>
           <div class="col-lg-4 mt-3" align="center">
             <img data-aos="fade-left" class="project-preview mb-3" src="img/project2-2.png" width="100%" alt="" />
             <a data-aos="fade-up" class="view-code text-light"
-              href="https://github.com/NaufalHafizh/Responsi_Basisdata"><i class="fab fa-github"></i> View Code</a>
+              href="https://github.com/NaufalHafizh/Responsi_Basisdata">View Source
+              Code</a>
           </div>
         </div>
       </div>
@@ -268,7 +269,7 @@
                 </div>
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">HTML Course</h3>
-                  <p class="company">Sololearn</p>
+                  <p class="">Sololearn</p>
                 </div>
               </div>
             </div>
@@ -281,7 +282,7 @@
                 </div>
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Peserta Kolaborasi Bangkitkan Talenta Negeri</h3>
-                  <p class="company">Kewirausahaan Sosial UGM</p>
+                  <p class="">Kewirausahaan Sosial UGM</p>
                 </div>
               </div>
             </div>
@@ -294,7 +295,7 @@
                 </div>
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Peserta Rekayasa Perangkat Lunak</h3>
-                  <p class="company">Universitas Ahmad Dahlan</p>
+                  <p class="">Universitas Ahmad Dahlan</p>
                 </div>
               </div>
             </div>
@@ -307,7 +308,7 @@
                 </div>
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Juara 1 Lomba DDP</h3>
-                  <p class="company">Universitas Ahmad Dahlan</p>
+                  <p class="">Universitas Ahmad Dahlan</p>
                 </div>
               </div>
             </div>
