--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
   <!-- Akhir About -->
@@ -230,12 +229,12 @@
       <h2 data-aos="fade-up" class="mb-3 text-center">Project</h2>
       <div class="card bg-dark" id="card-project">
         <div class="row justify-content-center">
-          <div class="col-lg-4 mt-3" align="center">
+          <div class="col-md-4 mt-3" align="center">
             <img data-aos="fade-right" class="project-preview mb-3" src="img/project1.png" width="100%" alt="" />
             <a data-aos="fade-up" class="view-code text-light" href="https://github.com/krisdewa/PHP-CRUD-Apotek">View
               Source Code</a>
           </div>
-          <div class="col-lg-4 mt-3" align="center">
+          <div class="col-md-4 mt-3" align="center">
             <img data-aos="fade-left" class="project-preview mb-3" src="img/project2-2.png" width="100%" alt="" />
             <a data-aos="fade-up" class="view-code text-light"
               href="https://github.com/NaufalHafizh/Responsi_Basisdata">View Source
