--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -268,6 +270,33 @@
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">HTML Course</h3>
                   <p class="">Sololearn</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
+                    <img data-aos="fade-right" id="certificate-image" src="img/6.png" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
+                  <h3 class="mt-2">Learn basics HTML, CSS, Typescript with Svelte</h3>
+                  <p class="">Udemy</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
+                    <img data-aos="fade-right" id="certificate-image" src="img/7.jpg" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
+                  <h3 class="mt-2">Workshop Javascript 101 Batch 1</h3>
+                  <p class="">Alterra Academy</p>
                 </div>
               </div>
             </div>
