--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div style="background-color: #2D3541" id="about-card" class="card">
         <div class="row g-4 justify-content-center fs-5 text-justify">
           <div class="col-md-5">
-            <h2 data-aos="fade-right" style="color: #41E6CA;">Wanna Know Me ?</h2>
+            <h2 data-aos="fade-right" style="color: #41E6CA; font-weight: 700;">Wanna Know Me ?</h2>
             <p data-aos="fade-right" class="lead fs-4">I'm a Junior Web Developer. Living in
               magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and
               fast
