--- a/index.html
+++ b/index.html
@@ -79,31 +79,9 @@
             <h2 data-aos="fade-right" style="color: #41E6CA; font-weight: 700;">Wanna Know Me ?</h2>
             <p data-aos="fade-right" class="lead fs-4">I'm a Junior Web Developer. Living in
               magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and
-              fast
-              learner
+              fast learner. Currently learn <b>React</b> and <b>Laravel 8</b>
             </p>
-            <div class="row">
-              <div class="col-md-5">
-                <div data-aos="fade-right" style="padding-bottom: 22px;" class="card text-dark bg-light mb-3 mt-3">
-                  <div class="card-body">
-                    <h5 class="card-title">Curious</h5>
-                    <p class="card-text fs-6"> curiosity leads to more greater learning, engagement, and performance at
-                      work
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-5">
-                <div data-aos="fade-right" class="card text-dark bg-light mb-3 mt-3">
-                  <div class="card-body">
-                    <h5 class="card-title">Fast Learner</h5>
-                    <p class="card-text fs-6">The ability to learn quickly ensures that you'll keep up with the demands
-                      of
-                      your new team</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+
             <div id="">
               <div class="mt-4">
                 <a data-aos="zoom-in" class="btn border-2 border-light text-light mail"
@@ -119,7 +97,7 @@
           </div>
           <div data-aos="fade-right" class="col-md-4 mb-2">
             <div class="card" style="border: none; border-radius: 12px;">
-              <img src="img/about-min.jpg" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
+              <img src="img/about.png" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
             </div>
           </div>
         </div>
