--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
           </div>
           <div data-aos="fade-right" class="col-md-4 mb-2">
             <div class="card" style="border: none; border-radius: 12px;">
-              <img src="img/about.png" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
+              <img src="img/about-back.png" style="border: none; border-radius: 12px;" class="card-img-top"
+                alt="porto1">
             </div>
           </div>
         </div>
