--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
           </div>
           <div data-aos="fade-right" class="col-md-4 mb-2">
-            <div class="card" style="border: none; border-radius: 12px;">
-              <img src="img/about-back.png" style="border: none; border-radius: 12px;" class="card-img-top"
+            <div class="card" style="border: none;">
+              <img src="img/vector-naufal-1080.png" style="border: none;" class="card-img-top rounded-circle"
                 alt="porto1">
             </div>
           </div>
