--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row g-4 justify-content-center fs-5 text-justify">
           <div class="col-md-5">
             <h2 data-aos="fade-right" style="color: #41E6CA; font-weight: 700;">Wanna Know Me ?</h2>
-            <p data-aos="fade-right" class="lead fs-4">I'm a Junior Web Developer. Living in
+            <p data-aos="fade-right" class="lead fs-4 mt-4">I'm a Junior Web Developer. Living in
               magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and
               fast learner. Currently learn <b>React</b> and <b>Laravel 8</b>
             </p>
@@ -95,7 +95,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-right" class="col-md-4 mb-2">
+          <div data-aos="fade-right" class="col-md-4">
             <div class="card" style="border: none;">
               <img src="img/vector-naufal-1080.png" style="border: none;" class="card-img-top rounded-circle"
                 alt="porto1">
