--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 data-aos="fade-right" style="color: #41E6CA; font-weight: 700;">Wanna Know Me ?</h2>
             <p data-aos="fade-right" class="lead fs-4 mt-4">I'm a Junior Web Developer. Living in
               magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and
-              fast learner. Currently learn <b>React</b> and <b>Laravel 8</b>
+              fast learner. Currently learn <b>Laravel 8</b>
             </p>
 
             <div id="">
