--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -265,7 +266,6 @@
                 </div>
               </div>
             </div>
-
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-6">
@@ -276,6 +276,19 @@
                 <div data-aos="fade-left" class="col-md-6 align-self-center">
                   <h3 class="mt-2">Workshop Javascript 101 Batch 1</h3>
                   <p class="">Alterra Academy</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-6">
+                  <center>
+                    <img data-aos="fade-right" id="certificate-image" src="img/8.jpg" class="d-block w-75" alt="..." />
+                  </center>
+                </div>
+                <div data-aos="fade-left" class="col-md-6 align-self-center">
+                  <h3 class="mt-2">UI/UX Designer & Product Manager</h3>
+                  <p class="">Harisenin</p>
                 </div>
               </div>
             </div>
