--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 					<div class="col-md-5">
 						<h2 data-aos="fade-right" style="color: #41E6CA; font-weight: 700;">Wanna Know Me ?</h2>
 						<p data-aos="fade-right" class="lead fs-4 mt-4">I'm a Junior Web Developer. Living in
-							magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and
+							magetan, east java. A Informatics Undergraduate student, currently studying in Yogyakarta.
+							Curious and
 							fast learner
 						</p>
 
@@ -99,9 +100,11 @@
 								<a data-aos="zoom-in" class="btn border-2 border-light text-light mail"
 									href="mailto: Muhammdnaufal40@gmail.com">E-Mail Me</a>
 								<a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-									href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
+									href="https://www.instagram.com/mnaufalhafizh20"><i
+										class="fab fa-instagram fa-2x"></i></a>
 								<a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-									href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
+									href="https://twitter.com/EfficientAnsici"><i
+										class="fab fa-twitter-square fa-2x"></i></a>
 								<a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
 									href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
 							</div>
@@ -109,7 +112,8 @@
 					</div>
 					<div data-aos="fade-right" class="col-md-4">
 						<div class="card" style="border: none;">
-							<img src="img/about-min.jpg" style="border: none;" class="card-img-top rounded-2" alt="porto1">
+							<img src="img/about-min.jpg" style="border: none;" class="card-img-top rounded-2"
+								alt="porto1">
 						</div>
 					</div>
 				</div>
@@ -236,47 +240,56 @@
 	<!-- Experience -->
 	<section class="project" id="Project">
 		<div class="container">
-			<h2 data-aos="fade-up" class="mb-3 text-center">Project</h2>
+			<div class="text-center mb-3">
+				<h2 data-aos="fade-up" class="">Project</h2>
+				<h5 class="">Semua project dapat di lihat pada <a style="color: #41E6CA;" class="text-decoration-none"
+						href="https://github.com/NaufalHafizh?tab=repositories">Github</a></h5>
+			</div>
 			<div class="card bg-dark" id="card-project">
 				<div class="row justify-content-center">
 					<div class="col-md-4 mt-3 mb-4" align="center">
-						<img data-aos="fade-right" class="project-preview mb-3" src="img/project1.png" width="100%" alt="" />
+						<img data-aos="fade-right" class="project-preview mb-3" src="img/project1.png" width="100%"
+							alt="" />
 						<h6>Apotek24k</h6>
-						<a data-aos="fade-up" class="view-code text-light" href="https://github.com/krisdewa/PHP-CRUD-Apotek">View
+						<a data-aos="fade-up" class="view-code text-light"
+							href="https://github.com/krisdewa/PHP-CRUD-Apotek">View
 							Source Code</a>
 					</div>
 					<div class="col-md-4 mt-3" align="center">
-						<img data-aos="fade-left" class="project-preview mb-3" src="img/project2-2.png" width="100%" alt="" />
+						<img data-aos="fade-left" class="project-preview mb-3" src="img/project2-2.png" width="100%"
+							alt="" />
 						<h6>Basis Data Toko Bangunan</h6>
 						<a data-aos="fade-up" class="view-code text-light"
 							href="https://github.com/NaufalHafizh/Responsi_Basisdata">View Source
 							Code</a>
 					</div>
 					<div class="col-md-4 mt-3" align="center">
-						<img data-aos="fade-left" class="project-preview mb-3" src="img/project 3.png" width="100%" alt="" />
+						<img data-aos="fade-left" class="project-preview mb-3" src="img/project 3.png" width="100%"
+							alt="" />
 						<h6>Laravel Blog</h6>
 						<a data-aos="fade-up" class="view-code text-light"
 							href="https://github.com/NaufalHafizh/Laravel_8_Study_Progress">View Source
 							Code</a>
 					</div>
 					<div class="col-md-4 mt-3" align="center">
-						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_4.png" width="100%" height="50%"
-							alt="" />
+						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_4.png" width="100%"
+							height="50%" alt="" />
 						<h6>Raja Kelapa Indonesia</h6>
 					</div>
 					<div class="col-md-4 mt-3" align="center">
-						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_5.png" width="100%" height="50%"
-							alt="" />
+						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_5.png" width="100%"
+							height="50%" alt="" />
 						<h6>Sistem informasi dan manajemen paket</h6>
 						<a data-aos="fade-up" class="view-code text-light"
 							href="https://github.com/NaufalHafizh/Informasi-Dan-Manajemen-Paket">View Source
 							Code</a>
 					</div>
 					<div class="col-md-4 mt-3" align="center">
-						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_6.png" width="100%" height="50%"
-							alt="" />
+						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_6.png" width="100%"
+							height="50%" alt="" />
 						<h6>Jurnal Informatika</h6>
-						<a data-aos="fade-up" class="view-code text-light" href="https://github.com/krisdewa/TA-RWEB">View Source
+						<a data-aos="fade-up" class="view-code text-light"
+							href="https://github.com/krisdewa/TA-RWEB">View Source
 							Code</a>
 					</div>
 				</div>
@@ -304,7 +317,8 @@
 							<div class="row">
 								<div class="col-md-6">
 									<center>
-										<img data-aos="fade-right" id="certificate-image" src="img/5.jpg" class="d-block w-75" alt="..." />
+										<img data-aos="fade-right" id="certificate-image" src="img/5.jpg"
+											class="d-block w-75" alt="..." />
 									</center>
 								</div>
 								<div data-aos="fade-left" class="col-md-6 align-self-center">
@@ -317,7 +331,8 @@
 							<div class="row">
 								<div class="col-md-6">
 									<center>
-										<img data-aos="fade-right" id="certificate-image" src="img/6.png" class="d-block w-75" alt="..." />
+										<img data-aos="fade-right" id="certificate-image" src="img/6.png"
+											class="d-block w-75" alt="..." />
 									</center>
 								</div>
 								<div data-aos="fade-left" class="col-md-6 align-self-center">
@@ -330,7 +345,8 @@
 							<div class="row">
 								<div class="col-md-6">
 									<center>
-										<img data-aos="fade-right" id="certificate-image" src="img/7.jpg" class="d-block w-75" alt="..." />
+										<img data-aos="fade-right" id="certificate-image" src="img/7.jpg"
+											class="d-block w-75" alt="..." />
 									</center>
 								</div>
 								<div data-aos="fade-left" class="col-md-6 align-self-center">
@@ -343,7 +359,8 @@
 							<div class="row">
 								<div class="col-md-6">
 									<center>
-										<img data-aos="fade-right" id="certificate-image" src="img/8.jpg" class="d-block w-75" alt="..." />
+										<img data-aos="fade-right" id="certificate-image" src="img/8.jpg"
+											class="d-block w-75" alt="..." />
 									</center>
 								</div>
 								<div data-aos="fade-left" class="col-md-6 align-self-center">
@@ -356,7 +373,8 @@
 							<div class="row">
 								<div class="col-md-6">
 									<center>
-										<img data-aos="fade-right" id="certificate-image" src="img/9.png" class="d-block w-75" alt="..." />
+										<img data-aos="fade-right" id="certificate-image" src="img/9.png"
+											class="d-block w-75" alt="..." />
 									</center>
 								</div>
 								<div data-aos="fade-left" class="col-md-6 align-self-center">
@@ -369,7 +387,8 @@
 							<div class="row">
 								<div class="col-md-6">
 									<center>
-										<img data-aos="fade-right" id="certificate-image" src="img/10.png" class="d-block w-75" alt="..." />
+										<img data-aos="fade-right" id="certificate-image" src="img/10.png"
+											class="d-block w-75" alt="..." />
 									</center>
 								</div>
 								<div data-aos="fade-left" class="col-md-6 align-self-center">
